--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^18.7.14",
     "@types/pg": "^8.15.5",
+    "@types/sqlite3": "^5.1.0",
     "@web-std/file": "^3.0.3",
     "jest": "^27.4.5",
     "mysql2": "^3.0.0",
     "pg": "^8.0.0",
     "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
     "testcontainers": "^10.28.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.8.2"
   },
   "peerDependencies": {
-    "@soapjs/soap": "file:../soap/soapjs-soap-0.5.12.tgz",
-    "mysql2": "^3.0.0",
-    "pg": "^8.0.0"
+    "@soapjs/soap": "^0.6.5",
+    "mysql2": "*",
+    "pg": "*",
+    "sqlite3": "*"
   },
   "optionalDependencies": {
-    "mysql2": "^3.0.0",
-    "pg": "^8.0.0"
-  },
-  "dependencies": {
-    "@types/sqlite3": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "mysql2": "*",
+    "pg": "*",
+    "sqlite3": "*"
   }
 }
